# moviecompql

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 546cc5723944_extend_relationship_for_moviecompilation.py  f63498c1d99f_init.py
app/: main.py  schema.py
app/core/: config.py  tasks.py
app/db/: session.py  tasks.py
app/enjoyers/: models.py  mutations.py  resolvers.py  schema.py
app/movies/: models.py  mutations.py  resolvers.py  schema.py  utils.py
